--- a/Pipfile
+++ b/Pipfile
@@ -20,6 +20,7 @@ psycopg2 = "==2.8.6"
 django-anymail = {version = "==8.2", extras = ["mailgun"]}
 Pillow = "==8.2.0"
 Django = "==3.1.11"
+django-autoslug = "==1.9.8"
 
 [dev-packages]
 pytz = "==2021.1"
