--- a/Pipfile
+++ b/Pipfile
@@ -21,6 +21,7 @@ django-anymail = {version = "==8.2", extras = ["mailgun"]}
 Pillow = "==8.2.0"
 Django = "==3.1.11"
 django-autoslug = "==1.9.8"
+django-vanilla-views = "==3.0.0"
 
 [dev-packages]
 pytz = "==2021.1"
